--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,4 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"/>
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/mealRandomizerFragment">
+
+    <fragment
+        android:id="@+id/mealRandomizerFragment"
+        android:name="com.jjwestendarp.mealrandomizer.presentation.MealRandomizerFragment"
+        android:label="MealRandomizerFragment" />
+</navigation>
